# trainticketwiki

./: mkdocs.yml  pyproject.toml
docs/: index.md
docs/ticket-standards/: .pages  index.md
docs/ticket-standards/domestic-standards/: .pages  index.md
docs/ticket-standards/domestic-standards/france/: index.md
docs/ticket-standards/domestic-standards/germany/: index.md  uic-918-3.md  uic-918-9-de.md
docs/ticket-standards/domestic-standards/germany/vdv/: .pages  eticore.md  vdv-ka.md
docs/ticket-standards/domestic-standards/hungary/: index.md
docs/ticket-standards/domestic-standards/switzerland/: index.md
docs/ticket-standards/domestic-standards/uk/: index.md
docs/ticket-standards/uic-standards/: .pages  dosipas.md  elb.md  fcb.md  index.md  ssbv1.md  ssbv2v3.md  tlb.md
