[tool.poetry]
name = "trainticketwiki"
description = "Train Ticket Standard Wiki"
authors = ["NeoRail Project <hello@neorail.org>"]
license = "CC-0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "*"
mkdocs-git-revision-date-localized-plugin = "*"
mkdocs-minify-plugin = "*"
mkdocs-git-committers-plugin-2 = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
